Fix sidebar overlapping content

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -17,9 +17,6 @@ h2
 /* Page
 -----------------------------------------------------------------------------*/
 @media (min-width 720px)
-  .page
-    padding-left 13.75rem
-
   .page-edit
     // display none
 
